--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
@@ -15,6 +15,7 @@
 	.pane-hwc-partner-hwc-partner-private-link-3,
 	.pane-node-profile-update-link{
 	  width: 20%;
+		
 		.pane-content{
 		min-height: 130px;
 		text-align: center;
@@ -22,12 +23,16 @@
 		margin: 10px;
 		border: 0;
 		background: transparent !important;
+		max-height: 100% !important;
+		display: flex;
+		height: 100%;
+
 			.hwc-partner-private-link-block-title{
 				text-align: right;
 				background: transparent;
 				color: #00309d;
 				border: 2px solid #bcd75b;
-				padding: 1em 1em;
+				padding: 0 1em;
 				border-radius: 12px;
 				display: flex;
 				align-items: center;
@@ -35,7 +40,8 @@
 				font-size: 15px;
 				font-weight: 600;
 				min-height: 78px;
-				min-width: 200px;
+				max-height: 100%;
+				min-width: 100%;
 				position: relative;
 				&:hover{
 				    color: #FFF;
@@ -44,9 +50,11 @@
 				    border: 2px solid #00309d;
 				    > a{
 				    	color: #FFF;
+				    	font-style: normal;
 				    }
 				}
 				a{
+					height: 100%;
 					font-weight: bold;
 					color: #003399;
 					font-size: 1em;
@@ -55,6 +63,7 @@
 				    width: 100%;
 				    justify-content: flex-end;
 				    align-items: center;
+				    font-style: normal;
 					&:before{
 						content: none;
 					}
@@ -75,13 +84,13 @@
 	.pane-hwc-partner-hwc-partner-private-link-0{
 		.hwc-partner-private-link-block-title{
 			a{
-				background: url(../images/pz-events.png) no-repeat;
+				background: url(../images/pz-events.png) 0 50% no-repeat;
     			height: 66px;
     			width: 100%;
 			}
 			&:hover{
 				a{
-					background: url(../images/mpp-create-event-hover.png) no-repeat;
+					background: url(../images/mpp-create-event-hover.png) 0 50% no-repeat;
 					
 				}
 			}
@@ -91,13 +100,13 @@
 	.pane-hwc-partner-hwc-partner-private-link-1{
 		.hwc-partner-private-link-block-title{
 			a{
-				background: url(../images/pz-news.png) no-repeat;
+				background: url(../images/pz-news.png) 0 50% no-repeat;
     			height: 66px;
     			width: 100%;
 			}
 			&:hover{
 				a{
-					background: url(../images/mpp-create-news-hover.png) no-repeat;
+					background: url(../images/mpp-create-news-hover.png) 0 50% no-repeat;
 					
 				}
 			}
@@ -107,13 +116,13 @@
 	.pane-hwc-partner-hwc-partner-private-link-2{
 		.hwc-partner-private-link-block-title{
 			a{
-				background: url(../images/pz-good-practice.png) no-repeat;
+				background: url(../images/pz-good-practice.png) 0 50% no-repeat;
     			height: 66px;
     			width: 100%;
 			}
 			&:hover{
 				a{
-					background: url(../images/mpp-good-practice-hover.png) no-repeat;
+					background: url(../images/mpp-good-practice-hover.png) 0 50% no-repeat;
 					
 				}
 			}
@@ -123,13 +132,13 @@
 	.pane-hwc-partner-hwc-partner-private-link-3{
 		.hwc-partner-private-link-block-title{
 			a{
-				background: url(../images/pz-partner-resource.png) no-repeat;
+				background: url(../images/pz-partner-resource.png) 0 50% no-repeat;
     			height: 66px;
     			width: 100%;
 			}
 			&:hover{
 				a{
-					background: url(../images/mpp-partner-resources-hover.png) no-repeat;
+					background: url(../images/mpp-partner-resources-hover.png) 0 50% no-repeat;
 					
 				}
 			}
@@ -139,12 +148,12 @@
 	.pane-node-profile-update-link{
 		.hwc-partner-private-link-block-title{
 			a{
-				background: url(../images/pz-update-profile.png) no-repeat;
+				background: url(../images/pz-update-profile.png) 0 50% no-repeat;
     			height: 66px;
 			}
 			&:hover{
 				a{
-					background: url(../images/mpp-update-profile-hover.png) no-repeat;
+					background: url(../images/mpp-update-profile-hover.png) 0 50% no-repeat;
 					
 				}
 			}
@@ -171,12 +180,14 @@
 	}
 
 	p.draft{
-	    margin-top: 1em;
-	    text-align: left;
-	    margin: 0 auto;
-	    bottom: 30px;
-	    width: 100%;
-	    display: block;
+		margin-top: 1em;
+		text-align: left;
+		margin: 0 auto;
+		width: 100%;
+		display: block;
+		position: absolute;
+		left: 20px;
+		bottom: -25px;
 		a{		
 			color:#003399;
 			background: #EEF4CC;
@@ -189,8 +200,6 @@
 /* Newsletter webpage */
 
 .page-node-129{
-
-
 	.panels-flexible-region.panels-flexible-region-new-center.panels-flexible-region-first.col-md-6{
 		background: url(../images/background-newsletter-page.png) no-repeat;
 		background-size: cover;
@@ -280,6 +289,9 @@
 				padding-left: 25px;
 				a{
 					color: #003399 !important;
+					&:hover{
+						text-decoration: underline !important;
+					}
 				}
 			}
 
@@ -324,3 +336,59 @@
 
 
 
+
+
+
+
+
+
+
+
+/* Responsive */
+
+/* Private Zone */
+
+@media (max-width: 1200px) {
+	.profile-edit-links-container{
+		.pane-hwc-partner-hwc-partner-private-link-0, 
+		.pane-hwc-partner-hwc-partner-private-link-1,
+		.pane-hwc-partner-hwc-partner-private-link-2,
+		.pane-hwc-partner-hwc-partner-private-link-3,
+		.pane-node-profile-update-link{
+			width: 30%;
+		}
+		.pane-hwc-partner-hwc-partner-private-link-0, 
+		.pane-hwc-partner-hwc-partner-private-link-1,
+		{
+	    	margin-bottom: 2em;
+		}
+	}
+}
+
+@media (max-width: 990px) {
+	.profile-edit-links-container{
+		.panels-flexible-region-inside-first{
+			justify-content: flex-start;
+		}
+
+		.pane-hwc-partner-hwc-partner-private-link-0, 
+		.pane-hwc-partner-hwc-partner-private-link-1,
+		.pane-hwc-partner-hwc-partner-private-link-2,
+		.pane-hwc-partner-hwc-partner-private-link-3,
+		.pane-node-profile-update-link{
+			width: 87%;
+			max-width: 320px;
+		}
+		.hwc-partner-private-link-block-description {
+		    margin-top: 0.8em;
+		}
+	}
+}
+
+@media (max-width: 669px) {
+	.profile-edit-links-container{
+		.panels-flexible-region-inside-first{
+			justify-content: center;
+		}
+	}
+}
