HW20-213 - HWC20 Development of the complete HWC20 Newsletter

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5272,14 +5272,16 @@ body.european-week #block-views-news-european-week ul > li:nth-child(2) {
   background-size: cover;
   border-radius: 10px;
   margin-bottom: 2em;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 13px;
+  padding-bottom: 5px;
 }
 .page-node-129 .panels-flexible-region.panels-flexible-region-new-center.panels-flexible-region-first.col-md-6 .pane-osha-newsletter-osha-newsletter-subscribe-extra {
   margin-right: 0;
   margin-left: 0;
   padding-top: 15px;
-  padding-bottom: 15px;
+  padding-bottom: 0;
   color: #FFF;
 }
 .page-node-129 .panels-flexible-region.panels-flexible-region-new-center.panels-flexible-region-first.col-md-6 .pane-osha-newsletter-osha-newsletter-subscribe-extra a {
