--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
@@ -205,14 +205,16 @@
 		background-size: cover;
 		border-radius: 10px;
 		margin-bottom: 2em;
-		padding-left: 15px;
-    	padding-right: 15px;
+		padding-left: 30px;
+   	 	padding-right: 30px;
+    	padding-top: 13px;
+    	padding-bottom: 5px;
 
 		.pane-osha-newsletter-osha-newsletter-subscribe-extra{
 			margin-right: 0;
     		margin-left: 0;
     		padding-top: 15px;
-    		padding-bottom: 15px;
+    		padding-bottom: 0;
     		color: #FFF;
     		a{
     			color: #FFF;
