--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
@@ -347,9 +347,74 @@
 }
 
 
+/* Good Practice Awards - GPA */
 
+.page-node-7276{
+	.main-container{
+		.field-name-field-introductory-text{
+			float: left;
+			width: 70%;
+			padding: 1em;
+		}
+		.field-name-body{
+			float: left;
+			width: 30%;
+			padding: 1em;
+		}
+		.slider--video--section{
+			clear: both;
+			background: #EFEFF0;
+			padding: 2em;
+			height: 350px;
+			 
+			h2.block-title{
+				color: #003399;
+				padding-top: 1em;
+				padding-bottom: 1em;
+			}
 
+			.multicarousel--block{
+				height: 190px;
+			}
 
+			.item{
+				p{
+					border:2px solid #DEE999;
+					padding: 3em;
+    				margin: 0 1em;
+				}
+			}
+			
+		}
+		.slider--video--section .slider--video--block .slider--video--items .multicarousel--block .btn-primary{
+		//TO DO LESS
+			background: #EFEFF0;
+		}
+
+		ol.multicarousel-indicators {
+		    position: absolute;
+		    display: block !important;
+		    z-index: 15;
+		    width: 92%;
+		    list-style: none;
+		    text-align: center;
+		    bottom: -14px;
+		}
+
+		
+		  .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .leftLst {
+		    position: absolute;
+		    top: -19px;
+		    left: -11px;
+		  }
+
+		  .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .rightLst {
+		    position: absolute;
+		    top: -19px;
+		    right: -11px;
+		  }
+	}
+}
 
 
 
